# label-02778-20260408

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile  schema.sql
backend/src/: api_docs.html  config.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs
backend/src/routes/: admin.rs  auth.rs  chat.rs  enterprise.rs  jianghu.rs  job.rs  market.rs  mod.rs  seeker.rs  upload.rs
backend/src/services/: admin.rs  auth.rs  chat.rs  enterprise.rs  jianghu.rs  job.rs  market.rs  mod.rs  seeker.rs
backend/tests/: api_tests.rs
backend/tests/common/: mod.rs
docs/: project_design.md
frontend-admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend-admin/src/: main.js
frontend-admin/src/__tests__/: api.test.js  dashboard.test.js  format.test.js  store.test.js
frontend-admin/src/api/: index.js
frontend-admin/src/router/: index.js
frontend-admin/src/store/: user.js
frontend-admin/src/styles/: global.scss
frontend-admin/src/utils/: format.js
frontend-admin/src/views/: Dashboard.vue  Enterprises.vue  JianghuManage.vue  JobManage.vue  Layout.vue  Login.vue  Logs.vue  MarketManage.vue  Users.vue
frontend-user/: index.html  package-lock.json  package.json  vite.config.js
frontend-user/src/: main.js
frontend-user/src/__tests__/: api.test.js  format.test.js  jianghu.test.js  store.test.js
frontend-user/src/api/: index.js
frontend-user/src/router/: index.js
frontend-user/src/store/: user.js
frontend-user/src/styles/: global.scss
(+14 files in other folders)
