[package]
name = "talent-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.16"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.19", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
futures-util = "0.3"
dashmap = "6"
parking_lot = "0.12"

[dev-dependencies]
actix-rt = "2"
actix-http = "3"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
